--- a/admin/index.html
+++ b/admin/index.html
@@ -6,6 +6,7 @@
   <title>لوحة الإدارة – Khotwa</title>
   <meta name="color-scheme" content="light dark"/>
   <style>
+    /* إعدادات CSS للوحة الإدارة */
     :root {
       --bg: #0a0f1a;
       --panel: #0f172a;
