--- a/admin/index.html
+++ b/admin/index.html
@@ -8,175 +8,128 @@
   <style>
     :root {
       --bg: #0a0f1a;
-      --panel: #0f172a;
-      --ring: #1f2937;
+      --panel: #1e293b;
+      --primary: #3b82f6;
+      --accent: #4b5563;
       --text: #e5e7eb;
-      --muted: #94a3b8;
-      --btn: #111827;
-      --p: #1e40af;
-      --ok: #16a34a;
-      --err: #ef4444;
+      --muted: #9ca3af;
+      --btn-bg: #111827;
+      --btn-hover: #1e40af;
+      --error: #ef4444;
+      --success: #10b981;
     }
+
     * {
       box-sizing: border-box;
+      margin: 0;
+      padding: 0;
     }
     body {
-      margin: 0;
-      font-family: system-ui, -apple-system, "Segoe UI", Tahoma, Arial, sans-serif;
-      background: var(--bg);
+      background-color: var(--bg);
+      font-family: 'Segoe UI', Tahoma, Arial, sans-serif;
       color: var(--text);
-    }
-    .wrap {
-      max-width: 1200px;
-      margin: auto;
-      padding: 16px;
     }
     header {
       display: flex;
-      align-items: center;
-      gap: .8rem;
       justify-content: space-between;
-      margin-bottom: 12px;
+      align-items: center;
+      padding: 20px;
+      background-color: var(--panel);
+      border-bottom: 1px solid var(--accent);
     }
     h1 {
-      margin: 0;
-      font-size: 1.25rem;
+      font-size: 1.5rem;
+      color: var(--primary);
     }
     .muted {
+      font-size: 0.9rem;
       color: var(--muted);
-      font-size: .9rem;
     }
     .tabs {
       display: flex;
-      gap: .4rem;
-      flex-wrap: wrap;
-      margin: .6rem 0;
+      gap: 1rem;
+      padding: 10px;
+      border-bottom: 2px solid var(--accent);
     }
     .tab {
-      border: 1px solid var(--ring);
-      background: var(--panel);
+      padding: 10px 20px;
+      background-color: var(--panel);
       border-radius: 10px;
-      padding: .45rem .7rem;
       cursor: pointer;
+      color: var(--text);
+      transition: background-color 0.3s;
     }
-    .tab[aria-selected="true"] {
-      background: #111827;
+    .tab:hover, .tab[aria-selected="true"] {
+      background-color: var(--primary);
     }
     .panel {
-      background: var(--panel);
-      border: 1px solid var(--ring);
-      border-radius: 12px;
-      padding: 12px;
-      margin: 12px 0;
       display: none;
+      padding: 20px;
+      background-color: var(--panel);
+      border-radius: 12px;
+      margin-top: 20px;
+    }
+    .panel.active {
+      display: block;
     }
     .tools {
       display: flex;
-      gap: .5rem;
-      flex-wrap: wrap;
-      align-items: center;
-      margin-bottom: .6rem;
+      gap: 1rem;
+      margin-bottom: 20px;
     }
     .btn {
-      border: 1px solid var(--ring);
-      background: var(--btn);
-      border-radius: 10px;
-      padding: .45rem .7rem;
+      padding: 10px 20px;
+      border-radius: 6px;
+      background-color: var(--btn-bg);
+      color: var(--text);
+      border: none;
       cursor: pointer;
+      transition: background-color 0.3s;
     }
-    .btn.p {
-      background: var(--p);
-      border-color: transparent;
+    .btn:hover {
+      background-color: var(--btn-hover);
     }
-    .btn.ok {
-      background: var(--ok);
-      border-color: transparent;
+    .btn.success {
+      background-color: var(--success);
     }
-    .btn.err {
-      background: var(--err);
-      border-color: transparent;
+    .btn.error {
+      background-color: var(--error);
+    }
+    .card {
+      background: var(--panel);
+      border: 1px solid var(--accent);
+      padding: 15px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+    .card h3 {
+      font-size: 1.2rem;
+      margin-bottom: 10px;
     }
     .row {
       display: grid;
       grid-template-columns: 1fr 1fr;
-      gap: .6rem;
+      gap: 20px;
     }
-    .row-3 {
-      grid-template-columns: repeat(3, 1fr);
-    }
-    label {
-      display: grid;
-      gap: .3rem;
-      font-size: .9rem;
-    }
-    input, textarea, select {
-      background: #0b1220;
-      border: 1px solid var(--ring);
-      color: var(--text);
-      border-radius: 10px;
-      padding: .55rem .6rem;
-    }
-    textarea {
-      min-height: 90px;
-      resize: vertical;
-    }
-    table {
+    input, select, textarea {
       width: 100%;
-      border-collapse: separate;
-      border-spacing: 0;
+      padding: 10px;
+      background-color: #111827;
+      border-radius: 8px;
+      border: 1px solid var(--accent);
+      color: var(--text);
+      font-size: 1rem;
     }
-    th, td {
-      padding: .55rem;
-      border-bottom: 1px solid var(--ring);
-      vertical-align: top;
+    .content-item {
+      background-color: var(--panel);
+      padding: 10px;
+      border-radius: 8px;
+      margin-bottom: 10px;
     }
-    th {
-      color: var(--muted);
-      font-weight: 600;
-      text-align: start;
-    }
-    .badge {
-      display: inline-block;
-      background: #111827;
-      border: 1px solid var(--ring);
-      border-radius: 999px;
-      padding: .1rem .5rem;
-      margin: .1rem;
-      font-size: .75rem;
-    }
-    .right {
-      margin-inline-start: auto;
-    }
-    code {
-      background: #111827;
-      border: 1px solid var(--ring);
-      padding: .12rem .3rem;
-      border-radius: 6px;
-    }
-    .toasts {
-      position: fixed;
-      inset-inline-start: 16px;
-      inset-block-end: 16px;
-      display: grid;
-      gap: .4rem;
-      z-index: 1000;
-    }
-    .toast {
-      background: #111827;
-      border: 1px solid var(--ring);
-      border-radius: 10px;
-      padding: .5rem .7rem;
-    }
-    .toast.ok {
-      background: #0d1f16;
-      border-color: #1f3d2c;
-    }
-    .toast.err {
-      background: #2a1111;
-      border-color: #4c1d1d;
-    }
-    @media (max-width: 980px) {
-      .row, .row-3 {
+
+    /* Media Query for responsiveness */
+    @media (max-width: 768px) {
+      .row {
         grid-template-columns: 1fr;
       }
     }
@@ -203,12 +156,12 @@
     </nav>
 
     <!-- إدارة المحتوى -->
-    <div class="panel" data-panel="content">
+    <div class="panel active" data-panel="content">
       <h2>إدارة المحتوى</h2>
       <div id="content-list">
         <!-- سيتم عرض المقالات والفعاليات هنا -->
       </div>
-      <button class="btn" onclick="loadContent()">تحميل المحتوى</button>
+      <button class="btn success" onclick="loadContent()">تحميل المحتوى</button>
     </div>
 
     <!-- الإعدادات -->
@@ -240,9 +193,9 @@
           tabs.forEach(t => t.setAttribute('aria-selected', 'false'));
           tab.setAttribute('aria-selected', 'true');
 
-          panels.forEach(panel => panel.style.display = 'none');
+          panels.forEach(panel => panel.classList.remove('active'));
           const activePanel = document.querySelector(`[data-panel="${tab.dataset.tab}"]`);
-          activePanel.style.display = 'block';
+          activePanel.classList.add('active');
         });
       });
 
