--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
   <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
   <meta name="theme-color" content="#0a0f1a" media="(prefers-color-scheme: dark)">
 
+  <!-- Favicons (local files) -->
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
+  <link rel="icon" href="/assets/favicon.ico">
+  <!-- Temporary fallback to hosted logo (safe to remove after upload) -->
+  <link rel="icon" href="https://g.top4top.io/p_3516rfttb1.jpg">
+
   <!-- OG/Twitter -->
   <meta property="og:type" content="website"/>
   <meta property="og:site_name" content="Khotwa Student Council"/>
@@ -36,7 +44,7 @@
   }
   </script>
 
-  <!-- ====== الجمالية المُحسّنة (Drop‑in CSS) ====== -->
+  <!-- ====== الجمالية المُحسّنة (Drop-in CSS) ====== -->
   <style>
     :root{
       /* Colors */
@@ -278,7 +286,7 @@
           <p data-lang="ar">نمكّن طلاب برنامج خطوة أكاديميًا واجتماعيًا وثقافيًا، ونبني الجسر بين الطلاب وإدارة الجامعة بفعاليات نوعية وخدمات موجهة.</p>
           <p data-lang="en" hidden>We empower Khotwa students academically, socially, and culturally, building bridges with the university through quality events and tailored services.</p>
           <div class="cta-row">
-            <a href="/register.html"class="btn btn-primary"><span data-lang="ar">قدّم للعضوية</span><span data-lang="en" hidden>Apply for Membership</span></a>
+            <a href="/register.html" class="btn btn-primary"><span data-lang="ar">قدّم للعضوية</span><span data-lang="en" hidden>Apply for Membership</span></a>
             <a href="/events.html" class="btn btn-outline"><span data-lang="ar">شاهد أقرب الفعاليات</span><span data-lang="en" hidden>See Upcoming Events</span></a>
           </div>
         </div>
@@ -429,7 +437,7 @@
       onScroll();
       window.addEventListener('scroll', onScroll, {passive:true});
     })();
+  </script>
   <script src="/assets/cms-boot.js" defer></script>
 </body>
 </html>
-
