--- a/index.html
+++ b/index.html
@@ -85,8 +85,13 @@
         <p data-lang="ar">نمكّن طلاب برنامج خطوة أكاديميًا واجتماعيًا وثقافيًا، ونبني الجسر بين الطلاب وإدارة الجامعة بفعاليات نوعية وخدمات موجهة.</p>
         <p data-lang="en" hidden>We empower Khotwa students academically, socially, and culturally, building bridges with the university through quality events and tailored services.</p>
         <div class="cta-row">
-          <a href="/register.html"class="btn btn-primary"><span data-lang="ar">قدّم للعضوية</span><span data-lang="en" hidden>Apply for Membership</span></a>
-          <a href="/events.html" class="btn btn-outline"><span data-lang="ar">شاهد أقرب الفعاليات</span><span data-lang="en" hidden>See Upcoming Events</span></a>
+          <!-- FIXED: added missing space before class -->
+          <a href="/register.html" class="btn btn-primary">
+            <span data-lang="ar">قدّم للعضوية</span><span data-lang="en" hidden>Apply for Membership</span>
+          </a>
+          <a href="/events.html" class="btn btn-outline">
+            <span data-lang="ar">شاهد أقرب الفعاليات</span><span data-lang="en" hidden>See Upcoming Events</span>
+          </a>
         </div>
       </div>
       <div class="hero-img">
@@ -100,34 +105,37 @@
     </div>
   </header>
 
-  <!-- About -->
-  <section aria-labelledby="about-ar" class="container">
-    <div class="section-head">
-      <h2 id="about-ar" data-lang="ar">من نحن</h2>
-      <h2 id="about-en" data-lang="en" hidden>About Us</h2>
-      <a class="muted" href="/about.html"><span data-lang="ar">المزيد</span><span data-lang="en" hidden>Learn more</span></a>
-    </div>
-    <div class="grid grid-2">
-      <article class="card"><h3 data-lang="ar">الرؤية</h3><h3 data-lang="en" hidden>Vision</h3><p data-lang="ar">دعم العملية التعليمية وخدمة المجتمع الجامعي.</p><p data-lang="en" hidden>Support the learning journey and serve our university community.</p></article>
-      <article class="card"><h3 data-lang="ar">الرسالة</h3><h3 data-lang="en" hidden>Mission</h3><p data-lang="ar">تمكين الطلاب وتعزيز علاقتهم بالإدارة الجامعية.</p><p data-lang="en" hidden>Empower students and strengthen ties with university administration.</p></article>
-      <article class="card"><h3 data-lang="ar">الأهداف</h3><h3 data-lang="en" hidden>Goals</h3><p data-lang="ar">التمثيل، القيادة، التفاعل المجتمعي، والدعوة.</p><p data-lang="en" hidden>Representation, leadership, community engagement, and advocacy.</p></article>
-      <article class="card"><h3 data-lang="ar">التنظيم</h3><h3 data-lang="en" hidden>Structure</h3><p data-lang="ar">رئيس ونائب وقادة فرق ومنسقو الأنشطة والإعلام.</p><p data-lang="en" hidden>President, Vice President, team leads, and activity/media coordinators.</p></article>
-    </div>
-  </section>
+  <!-- Main content wrapper added for skip-link target -->
+  <main id="main">
+    <!-- About -->
+    <section aria-labelledby="about-ar" class="container">
+      <div class="section-head">
+        <h2 id="about-ar" data-lang="ar">من نحن</h2>
+        <h2 id="about-en" data-lang="en" hidden>About Us</h2>
+        <a class="muted" href="/about.html"><span data-lang="ar">المزيد</span><span data-lang="en" hidden>Learn more</span></a>
+      </div>
+      <div class="grid grid-2">
+        <article class="card"><h3 data-lang="ar">الرؤية</h3><h3 data-lang="en" hidden>Vision</h3><p data-lang="ar">دعم العملية التعليمية وخدمة المجتمع الجامعي.</p><p data-lang="en" hidden>Support the learning journey and serve our university community.</p></article>
+        <article class="card"><h3 data-lang="ar">الرسالة</h3><h3 data-lang="en" hidden>Mission</h3><p data-lang="ar">تمكين الطلاب وتعزيز علاقتهم بالإدارة الجامعية.</p><p data-lang="en" hidden>Empower students and strengthen ties with university administration.</p></article>
+        <article class="card"><h3 data-lang="ar">الأهداف</h3><h3 data-lang="en" hidden>Goals</h3><p data-lang="ar">التمثيل، القيادة، التفاعل المجتمعي، والدعوة.</p><p data-lang="en" hidden>Representation, leadership, community engagement, and advocacy.</p></article>
+        <article class="card"><h3 data-lang="ar">التنظيم</h3><h3 data-lang="en" hidden>Structure</h3><p data-lang="ar">رئيس ونائب وقادة فرق ومنسقو الأنشطة والإعلام.</p><p data-lang="en" hidden>President, Vice President, team leads, and activity/media coordinators.</p></article>
+      </div>
+    </section>
 
-  <!-- Events -->
-  <section aria-labelledby="events-ar" class="container">
-    <div class="section-head">
-      <h2 id="events-ar" data-lang="ar">الفعاليات القادمة</h2>
-      <h2 id="events-en" data-lang="en" hidden>Upcoming Events</h2>
-      <a class="muted" href="/events.html"><span data-lang="ar">تقويم الفعاليات</span><span data-lang="en" hidden>All events</span></a>
-    </div>
-    <div class="grid grid-3">
-      <article class="card"><h3 data-lang="ar">ورشة تخصصات خطوة</h3><h3 data-lang="en" hidden>Khotwa Majors Workshop</h3><p class="muted" data-lang="ar">IT، الأمن السيبراني، العلوم الحيوية، الأعمال.</p><p class="muted" data-lang="en" hidden>IT, Cybersecurity, Biosciences, Business.</p></article>
-      <article class="card"><h3 data-lang="ar">بطولة البادل</h3><h3 data-lang="en" hidden>Padel Championship</h3><p class="muted" data-lang="ar">تنظيم رياضي طلابي – La Trobe Sports Centre.</p><p class="muted" data-lang="en" hidden>Student sports event – La Trobe Sports Centre.</p></article>
-      <article class="card"><h3 data-lang="ar">ماراثون داخل الحرم</h3><h3 data-lang="en" hidden>On-Campus Marathon</h3><p class="muted" data-lang="ar">مسارات 1K و2.5K و10K.</p><p class="muted" data-lang="en" hidden>1K, 2.5K, and 10K routes.</p></article>
-    </div>
-  </section>
+    <!-- Events -->
+    <section aria-labelledby="events-ar" class="container">
+      <div class="section-head">
+        <h2 id="events-ar" data-lang="ar">الفعاليات القادمة</h2>
+        <h2 id="events-en" data-lang="en" hidden>Upcoming Events</h2>
+        <a class="muted" href="/events.html"><span data-lang="ar">تقويم الفعاليات</span><span data-lang="en" hidden>All events</span></a>
+      </div>
+      <div class="grid grid-3">
+        <article class="card"><h3 data-lang="ar">ورشة تخصصات خطوة</h3><h3 data-lang="en" hidden>Khotwa Majors Workshop</h3><p class="muted" data-lang="ar">IT، الأمن السيبراني، العلوم الحيوية، الأعمال.</p><p class="muted" data-lang="en" hidden>IT, Cybersecurity, Biosciences, Business.</p></article>
+        <article class="card"><h3 data-lang="ar">بطولة البادل</h3><h3 data-lang="en" hidden>Padel Championship</h3><p class="muted" data-lang="ar">تنظيم رياضي طلابي – La Trobe Sports Centre.</p><p class="muted" data-lang="en" hidden>Student sports event – La Trobe Sports Centre.</p></article>
+        <article class="card"><h3 data-lang="ar">ماراثون داخل الحرم</h3><h3 data-lang="en" hidden>On-Campus Marathon</h3><p class="muted" data-lang="ar">مسارات 1K و2.5K و10K.</p><p class="muted" data-lang="en" hidden>1K, 2.5K, and 10K routes.</p></article>
+      </div>
+    </section>
+  </main>
 
   <!-- Footer -->
   <footer aria-label="تذييل الموقع">
@@ -137,7 +145,49 @@
     </div>
   </footer>
 
-  <!-- Scripts -->
+  <!-- Scripts: tiny helpers so الصفحة تعمل حتى لو غاب cms-boot.js -->
+  <script>
+    // سنة الحقوق
+    (function(){ var y=document.getElementById('year'); if(y){ y.textContent=new Date().getFullYear(); } })();
+
+    // فتح/غلق قائمة الجوال
+    (function(){
+      const btn = document.getElementById('menu-toggle');
+      const nav = document.getElementById('primary-nav');
+      if(btn && nav){
+        btn.addEventListener('click', () => {
+          const open = nav.getAttribute('data-open') === 'true';
+          nav.setAttribute('data-open', String(!open));
+          btn.setAttribute('aria-expanded', String(!open));
+        });
+      }
+    })();
+
+    // تبديل اللغة (يخفي/يظهر العناصر ذات data-lang)
+    (function(){
+      const toggle = document.getElementById('lang-toggle');
+      if(!toggle) return;
+      const setLang = (lang) => {
+        document.querySelectorAll('[data-lang]').forEach(el => {
+          const v = el.getAttribute('data-lang');
+          if(v === lang){ el.hidden = false; } else { el.hidden = true; }
+        });
+        toggle.textContent = (lang === 'ar') ? 'English' : 'العربية';
+        toggle.setAttribute('aria-pressed', lang !== 'ar');
+        document.documentElement.lang = (lang === 'ar') ? 'ar' : 'en';
+        document.documentElement.dir  = (lang === 'ar') ? 'rtl' : 'ltr';
+      };
+      // اللغة الافتراضية: العربية
+      let current = 'ar';
+      setLang(current);
+      toggle.addEventListener('click', () => {
+        current = (current === 'ar') ? 'en' : 'ar';
+        setLang(current);
+      });
+    })();
+  </script>
+
+  <!-- ملف نظامك (إن وُجد) -->
   <script src="/assets/cms-boot.js" defer></script>
 </body>
 </html>
